--- a/myapp/templates/Page1.html
+++ b/myapp/templates/Page1.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Page</title>
-</head>
-<body>
-    <h1>Dynamic Page with parameter: param 1 - {{ param }}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Dynamic Page{% endblock %}
+
+{% block content %}
+<h1>Dynamic Page with parameter: {{ param }}</h1>
+{% endblock %}
