--- a/myapp/templates/Page2.html
+++ b/myapp/templates/Page2.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Page2</title>
-</head>
-<body>
-    <h1>Dynamic Page2 with parameters: <br>Param 1 - {{ param1 }}, Param 2 - {{ param2 }}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Dynamic Page2{% endblock %}
+
+{% block content %}
+<h1>Dynamic Page2 with parameter: {{ param1 }}, {{ param2 }}</h1>
+{% endblock %}
